--- a/ToDoList/ToDoList.csproj
+++ b/ToDoList/ToDoList.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <IntermediateOutputPath>$(TMPDIR)/$(USER)/project/obj</IntermediateOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
